force-app/main/default/objects/Scoring_Criteria__c/Scoring_Criteria__c.object-meta.xml
<CustomObject>
    <label>Scoring Criteria</label>
    <nameField>
        <label>Scoring Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>