force-app/main/default/objects/Scoring_Criteria__c/fields/Condition_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Condition_Criteria__c</fullName>
    <label>Condition Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>