force-app/main/default/objects/Scoring_Criteria__c/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>