force-app/main/default/objects/Scoring_Criteria__c/fields/Score_to_be_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Score_to_be_Awarded__c</fullName>
    <label>Score to be Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>