force-app/main/default/objects/Scoring_Criteria__c/fields/Scoring_rule__c.field-meta.xml
<CustomField>
    <fullName>Scoring_rule__c</fullName>
    <label>Scoring rule</label>
    <referenceTo>Scoring_rule__c</referenceTo>
    <relationshipLabel>Scoring Criterias</relationshipLabel>
    <relationshipName>Scoring_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>